# spectrus

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  constants.ts  main.tsx  tauri-env.d.ts
client/src/api/: auth.ts  channels.ts  client.ts  invites.ts  members.ts  messages.ts  plugins.ts  roles.ts  settings.ts  voice.ts
client/src/components/: ErrorBoundary.tsx  ProtectedRoute.tsx  Tooltip.module.css  Tooltip.tsx  UpdateChecker.module.css  UpdateChecker.tsx
client/src/design/: components.css  index.css  tokens.css  typography.css
client/src/layout/: AppShell.module.css  AppShell.tsx  ChannelSidebar.module.css  ChannelSidebar.tsx  ContentArea.module.css  ContentArea.tsx  ServerRail.module.css  ServerRail.tsx
client/src/services/: KeychainService.ts  VoiceService.ts
client/src/stores/: useAuthStore.ts  useChannelsStore.ts  useMembersStore.ts  useMessagesStore.ts  useServersStore.ts  useUIStore.ts  useVoiceStore.ts
client/src/types/: index.ts
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: keychain.rs  main.rs
media/: Dockerfile  package-lock.json  package.json
media/src/: Peer.ts  Room.ts  index.ts  worker.ts
server/: Dockerfile  go.mod  go.sum
shared/: index.ts  package.json
(+54 files in other folders)
