[package]
name = "spectrus-desktop"
version = "0.1.0"
description = "Spectrus desktop client"
authors = ["Spectrus Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                  = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-updater   = "2"
tauri-plugin-process   = "2"
serde                  = { version = "1", features = ["derive"] }
serde_json             = "1"

# keyring wraps the native OS credential store. The base [dependencies] entry
# is removed entirely to avoid Cargo version-conflict errors when platform
# target sections also declare keyring. Each target gets exactly one entry.
#   macOS   → Keychain Services        (no extra features required)
#   Windows → Credential Manager      (no extra features required)
#   Linux   → libsecret / Secret Service (D-Bus) via tokio + openssl

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3" }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3" }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-openssl"] }
